app/static/css/style.css
html, body {
  background-color: #262626;
  color: #B1B1B1;
  font-family: Helvetica, Arial, sans-serif;

  margin: 0;
  padding: 0;
}

.wrapper {
  display:flex;
  flex-direction:column;
  height:100vh;
}

.columnlayout {
  display: flex;
  flex: 1;
  margin-top:58px;
}

.column-sidebar {
  width: 300px;
  border-left: 2px solid #161616;
}

.column-content {
  padding: 10px 20px 20px 20px;
  overflow: scroll;
}

.column-content h1, .column-content h2, .column-content h3, .column-content h4, .column-content h5, .column-content h6 {
  color: #B1B1B1;
  font-weight: 400;
  line-height: 1.125;
}

.column-content h3 {
  font-size: 1.5em;
  margin-bottom: 0.6666em;
}

.content {
  padding: 10px 20px 0 20px;
  height: 100vh;
  margin-top: 58px;
}

.menubar {
  font-family: 'Lucida Sans', Geneva, Verdana, sans-serif;
  font-size: 18px;
  border-bottom: 2px solid #161616;
  text-align: center;
  padding-top: 5px;
  margin-bottom: 0;

  display: flex;
  justify-content: center;

  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
  background-color: #262626;
}

.menubar div {
  width: 274px;
  padding: 12px;
}

.menubar * a {
  color: #B1B1B1;
}

.menubar * a:hover {
  color: #319aee;
}

.content h1, .content h2, .content h3, .content h4, .content h5, .content h6 {
  color: #B1B1B1;
}

.tabs li.is-active a {
  border-bottom-color: #319AEE;
  color: #319AEE;
}

.tabs a:hover {
  border-bottom-color: #E2E2E2;
  color: #E2E2E2;
}

.table {
  background-color: transparent;
  color: #E2E2E2;
}

.content table tr:hover {
  background-color: transparent;
}

.landingpage-buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;

  margin-top: 45px;
}

.landingpage-buttons .button {
  width: 250px;
  margin: 10px;
}

.landingpage-caption {
  margin-top: 12%;
  text-align: center;
  color: #E2E2E2;
}

.landingpage-config {
  text-align: center;
  font-size: 14pt;
  margin-top: 30px;
}

.landingpage-config a {
  color: #B1B1B1;
  text-decoration: underline;
}

.landingpage-config a:hover {
  color: #319aee;
}

.queued-event-list {
  display: flex;
  flex-direction: row;
  width: 100vw;
  height: 65;
  border-bottom: 2px solid #161616;
  padding: 0 5px;
}

.pulse-animation {
  animation: pulse 400ms 2;
}

@keyframes pulse {
  0%, 100% {
    color: #4A4A4A;
  }

  50% {
    color: #319AEE;
  }
}

.button-pulse-success {
  animation: buttonpulse-success ease-out 400ms 1;
}

@keyframes buttonpulse-success {
  0%, 100% {
    background-color: #3273dc;
  }

  50% {
    background-color: #23d160;
  }
}

.button-pulse-error {
  animation: buttonpulse-error ease-out 400ms 2;
}

@keyframes buttonpulse-error {
  0%, 100% {
    background-color: #3273dc;
  }

  50% {
    background-color: #FF3860;
  }
}

.loader, .loader:after {
  border-radius: 50%;
  width: 5em;
  height: 5em;
}

.loader {
  margin: 60px auto;
  font-size: 10px;
  position: relative;
  text-indent: -9999em;
  border-top: 0.6em solid rgba(255, 255, 255, 0.2);
  border-right: 0.6em solid rgba(255, 255, 255, 0.2);
  border-bottom: 0.6em solid rgba(255, 255, 255, 0.2);
  border-left: 0.6em solid #ffffff;
  transform: translateZ(0);
  animation: load8 1.1s infinite linear;
}

@-webkit-keyframes load8 {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes load8 {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.settings-modal {
  position: absolute;
  top: 0;
  z-index: 100;

  height: calc(100vh - 80px);
  width: 330px;

  background-color: #FFFFFF;
  color: #000000;

  padding: 20px;
  box-shadow: 0 0 5px #555555;
  overflow: auto;

  animation: settings-modal-slidein linear 100ms;
}

@keyframes settings-modal-slidein {
  from {
    left: -20vw;
  }

  to {
    left: 0;
  }
}

